k8s-apps/bookinfo/bookinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress
  annotations:
    nginx.org/ssl-services: "productpage"
    #nginx.org/location-snippets: |
    # opentracing_propagate_context;
    # opentracing_operation_name "nginx-ingress";
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bookinfo.nginx.rocks
    secretName: nginx-rocks-cert
  rules:
    - host: bookinfo.nginx.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
